--- a/template/package.json
+++ b/template/package.json
@@ -14,10 +14,6 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
-    "websocket": "^1.0.35",
-    "dotenv":"^16.4.5"
-  },
-  "bin": {
-    "node-sysresource": "bin/cli.js"
+    "websocket": "^1.0.35"
   }
 }
