--- a/template/package.json
+++ b/template/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
-    "websocket": "^1.0.35"
+    "websocket": "^1.0.35",
+	"dotenv":"^16.4.5"
   }
 }
